Added sounds class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Piano</string>
+    <string name="app_name">Piano Valentin</string>
     <string name="action_settings">Settings</string>
     <string name="C">C</string>
     <string name="D">D</string>
